contrast colors fix for try button and focus selection

--- a/src/themes/website/styles/docs.scss
+++ b/src/themes/website/styles/docs.scss
@@ -276,13 +276,13 @@ operation-console {
         border-radius: 4px;
         transition-duration: .4s;
         height: 30px;
-        background-color: #218739;
+        background-color: #128930;
         color: white;
         cursor: pointer;
         white-space: nowrap;
 
         &:hover {
-            color: #218739;
+            color: #128930;
             background-color: white;
         }
     }
